@@ -39,6 +39,7 @@ where XXXXXX is the bug number as listed below.
 326444  Cavium MIPS Octeon Specific Load Indexed Instructions
 326462  Refactor vgdb to isolate invoker stuff into separate module
 326983  Clear direction flag after tests on amd64.
+327212  Do not prepend the current directory to absolute path names.
 327238  Callgrind Assertion 'passed <= last_bb->cjmp_count' failed
 327284  s390x: Fix translation of the risbg instruction
 327837  dwz compressed alternate .debug_info and .debug_str not read correctly
